add meal detail, category detail

--- a/app/src/main/res/layout/category_item_details.xml
+++ b/app/src/main/res/layout/category_item_details.xml
@@ -6,7 +6,8 @@
     android:layout_marginHorizontal="16dp"
     android:layout_marginTop="12dp"
     app:cardCornerRadius="12dp"
-    app:cardElevation="12dp">
+    app:cardElevation="12dp"
+    android:id="@+id/fullLayout">
 
     <LinearLayout
         android:layout_width="match_parent"
