--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".ui.MainActivity">
 
     <androidx.appcompat.widget.SearchView
         android:id="@+id/searchView"
@@ -49,6 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:text="Category Name"
+        android:layout_marginBottom="16dp"
         android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -57,11 +58,12 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvLayout2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvCategoryName"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:listitem="@layout/category_item_details" />
+        tools:listitem="@layout/category_item_details"
+        android:layout_marginBottom="8dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
