--- a/app/src/main/res/layout/activity_meal_details.xml
+++ b/app/src/main/res/layout/activity_meal_details.xml
@@ -5,8 +5,8 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="8dp"
-    tools:context=".MealDetailsActivity">
+    android:padding="16dp"
+    tools:context=".ui.MealDetailsActivity">
 
     <ImageView
         android:id="@+id/ivMealImage"
@@ -23,10 +23,10 @@
         android:id="@+id/ivWatchOnYoutube"
         android:layout_width="60dp"
         android:layout_height="60dp"
+        android:layout_margin="16dp"
         android:src="@drawable/play_button"
-        app:layout_constraintEnd_toEndOf="@id/ivMealImage"
         app:layout_constraintBottom_toBottomOf="@id/ivMealImage"
-        android:layout_margin="16dp"/>
+        app:layout_constraintEnd_toEndOf="@id/ivMealImage" />
 
     <TextView
         android:id="@+id/tvMealName"
@@ -40,64 +40,75 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/ivMealImage" />
 
-    <TextView
-        android:id="@+id/tvMealCategory"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
-        android:text="Category: Chicken"
-        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
-        android:textColor="@color/black"
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvMealName" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvMealName">
 
-    <TextView
-        android:id="@+id/tvMealOriginCountry"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
-        android:text="Origin Country: Japanes"
-        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
-        android:textColor="@color/black"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvMealCategory" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/tvMealTags"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
-        android:text="Tags: "
-        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
-        android:textColor="@color/black"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvMealOriginCountry" />
+            <TextView
+                android:id="@+id/tvMealCategory"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="2dp"
+                android:text="Category: Chicken"
+                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
+                android:textColor="@color/black"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tvMealName" />
 
-    <TextView
-        android:id="@+id/tvMealIngredients"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
-        android:text="Ingredients: "
-        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
-        android:textColor="@color/black"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvMealTags" />
+            <TextView
+                android:id="@+id/tvMealOriginCountry"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="2dp"
+                android:text="Origin Country: Japanes"
+                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
+                android:textColor="@color/black"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tvMealCategory" />
 
-    <TextView
-        android:id="@+id/tvMealInstruction"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="Instructions goes Here...."
-        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
-        android:textColor="@color/black"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvMealIngredients" />
+            <TextView
+                android:id="@+id/tvMealTags"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="2dp"
+                android:text="Tags: "
+                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
+                android:textColor="@color/black"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tvMealOriginCountry" />
 
+            <TextView
+                android:id="@+id/tvMealIngredients"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="2dp"
+                android:text="Ingredients: "
+                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
+                android:textColor="@color/black"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tvMealTags" />
 
+            <TextView
+                android:id="@+id/tvMealInstruction"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Instructions goes Here...."
+                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
+                android:textColor="@color/black"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tvMealIngredients" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-
+    </ScrollView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
